[project]
name = "expected-signaling-probability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "qutip>=5.2.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 256


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["expected_signaling_probability*"]
